--- a/src/app/edit/addEditResource.tpl.html
+++ b/src/app/edit/addEditResource.tpl.html
@@ -40,7 +40,7 @@
         </div>
         <div class="form-group">
           <label for="tags">Taggar</label>
-          <input ng-model="resource.tags" type="text" class="form-control" id="tags" placeholder="Till exempel: barn, lågmält, fnissigt)">
+          <input ng-model="resource.tags" type="text" class="form-control" id="tags" placeholder="Till exempel: barn, lågmält, fnissigt">
         </div>
         <div class="form-group">
           <label for="restrict">Dela med</label>
