--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -209,13 +209,13 @@ div.sp_paging {
     clear: left;
 }
 
-/*.dndLists .thumb {
+.dndLists .thumb {
     float: left;
 }
 
 .dndLists .thumb img {
     height: 40px;
-}*/
+}
 
 .dndLists .name {
     top:0;
