--- a/src/app/edit/edit.tpl.html
+++ b/src/app/edit/edit.tpl.html
@@ -38,9 +38,9 @@
               <div class="handle">::::</div>
               <dnd-nodrag>
                 <div class="thumb">
-                  <img class="media-object" ng-src="{{apiBase}}image/64x64/{{resource.source.id}}.{{resource.source.extension}}" ng-switch-when="image">
-                  <img class="media-object" src="/assets/img/icon_sound.png" ng-switch-when="sound">
-                  <img class="media-object" src="/assets/img/icon_light.png" ng-switch-when="light">
+                  <img ng-src="{{apiBase}}image/64x64/{{resource.source.id}}.{{resource.source.extension}}" ng-switch-when="image">
+                  <img src="/assets/img/icon_sound.png" ng-switch-when="sound">
+                  <img src="/assets/img/icon_light.png" ng-switch-when="light">
                 </div>
                 <div class="name">
                   <div>{{resource.name}}</div>
