show handle on hover, change color on hover

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,5 +1,4 @@
 // App-wide variables and bootstrap overwrites.
-
+@li-hover-color: rgb(245,245,245);
 // Change glyphicons path because of our build system.
 @icon-font-path: "../assets/fonts/";
-
