--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -158,20 +158,28 @@ div.sp_paging {
  * browsers we can use event.offsetY for this.
  */
 .dndLists ul[dnd-list] li {
-    background-color: #fff;
-    border-bottom: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-    display: block;
-    padding: 10px;
-    margin-bottom: -1px;
+  background-color: #fff;
+  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+  display: block;
+  padding: 10px;
+  margin-bottom: -1px;
+  cursor: move;
 
-    /* Disable text selection if item is not draggable */
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  /* Disable text selection if item is not draggable */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.dndLists ul[dnd-list] li:hover {
+  background-color: @li-hover-color;
+
+  .handle {
+    opacity: 1;
+  }
 }
 
 /**
@@ -201,30 +209,30 @@ div.sp_paging {
 
 
 .dndLists .handle {
-    cursor: move;
-    position: relative;
-    top: 14px;
-    margin-right: 8px;
-    float: left;
-    clear: left;
+  opacity: 0;
+  position: relative;
+  top: 14px;
+  margin-right: 8px;
+  float: left;
+  clear: left;
 }
 
 .dndLists .thumb {
-    float: left;
+  float: left;
 }
 
 .dndLists .thumb img {
-    height: 40px;
+  height: 40px;
 }
 
 .dndLists .name {
-    top:0;
-    left:0;
-    right:0;
-    margin-left: 20px;
-    float: left;
-    width: 220px;
-    overflow: auto;
+  top:0;
+  left:0;
+  right:0;
+  margin-left: 20px;
+  float: left;
+  width: 220px;
+  overflow: auto;
 }
 
 .dndLists .resource {
