--- a/src/app/edit/edit.tpl.html
+++ b/src/app/edit/edit.tpl.html
@@ -85,10 +85,9 @@
           <input id="paletteTitle" ng-model="palette.name" class="sp_titlebox form-control" type="text" placeholder="Skriv in palettens namn här">
           <button class="btn btn-default btn-success pull-right" ng-click="savePalette()">Spara palett</button>
         </div>
-        <div class="sp_descriptionbox">
-          <textarea id="paletteDescription" ng-model="palette.description" class="long-input form-control" type="text" placeholder="Skriv in palettens beskrivning här">
-          </textarea>
-        </div>
+        <textarea id="paletteDescription" ng-model="palette.description" class="sp_descriptionbox long-input form-control" type="text" placeholder="Skriv in palettens beskrivning här">
+        </textarea>
+
       </div>
       <div class="dndLists sp_scrollport">
         <ul dnd-list="palette.assets">
