--- a/src/less/main.less
+++ b/src/less/main.less
@@ -131,7 +131,11 @@ input[type=range]::-webkit-slider-thumb {
 /*div.media-body {
   padding: 4px;
 }*/
-
+.dndLists ul[dnd-list] li.palette_item {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin: 5px 0;
+}
 .palette_item div.media-body label.checkbox{
   margin-bottom: 10px;
 }
